src/objects/User_Schedule__c.object
<CustomObject>
    <fields>
        <fullName>Center_Information__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Center Information</label>
        <referenceTo>Center_Information__c</referenceTo>
        <relationshipLabel>User Schedules</relationshipLabel>
        <relationshipName>User_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DOW__c</fullName>
        <label>DOW</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Hour_Int__c</fullName>
        <formula>VALUE(
  SUBSTITUTE(
    LEFT(
      TEXT(End_Time__c )
    ,2)
  ,&apos;:&apos;,&apos;&apos;)
) + if(RIGHT(Text(End_Time__c),2)==&apos;PM&apos; &amp;&amp; VALUE(
  SUBSTITUTE(
    LEFT(
      TEXT(End_Time__c )
    ,2)
  ,&apos;:&apos;,&apos;&apos;)
)!= 12 ,12,0)</formula>
        <label>End Hour Int</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Minute_Int__c</fullName>
        <formula>VALUE(
  LEFT(
    RIGHT(
      TEXT(End_Time__c ), 5
    )
  ,2)
)</formula>
        <label>End Minute Int</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>7:00 AM</fullName>
                </value>
                <value>
                    <fullName>7:10 AM</fullName>
                </value>
                <value>
                    <fullName>7:20 AM</fullName>
                </value>
                <value>
                    <fullName>7:30 AM</fullName>
                </value>
                <value>
                    <fullName>7:40 AM</fullName>
                </value>
                <value>
                    <fullName>7:50 AM</fullName>
                </value>
                <value>
                    <fullName>8:00 AM</fullName>
                </value>
                <value>
                    <fullName>8:10 AM</fullName>
                </value>
                <value>
                    <fullName>8:20 AM</fullName>
                </value>
                <value>
                    <fullName>8:30 AM</fullName>
                </value>
                <value>
                    <fullName>8:40 AM</fullName>
                </value>
                <value>
                    <fullName>8:50 AM</fullName>
                </value>
                <value>
                    <fullName>9:00 AM</fullName>
                </value>
                <value>
                    <fullName>9:10 AM</fullName>
                </value>
                <value>
                    <fullName>9:20 AM</fullName>
                </value>
                <value>
                    <fullName>9:30 AM</fullName>
                </value>
                <value>
                    <fullName>9:40 AM</fullName>
                </value>
                <value>
                    <fullName>9:50 AM</fullName>
                </value>
                <value>
                    <fullName>10:00 AM</fullName>
                </value>
                <value>
                    <fullName>10:10 AM</fullName>
                </value>
                <value>
                    <fullName>10:20 AM</fullName>
                </value>
                <value>
                    <fullName>10:30 AM</fullName>
                </value>
                <value>
                    <fullName>10:40 AM</fullName>
                </value>
                <value>
                    <fullName>10:50 AM</fullName>
                </value>
                <value>
                    <fullName>11:00 AM</fullName>
                </value>
                <value>
                    <fullName>11:10 AM</fullName>
                </value>
                <value>
                    <fullName>11:20 AM</fullName>
                </value>
                <value>
                    <fullName>11:30 AM</fullName>
                </value>
                <value>
                    <fullName>11:40 AM</fullName>
                </value>
                <value>
                    <fullName>11:50 AM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lunch_End_Hour_Int__c</fullName>
        <formula>VALUE(
  SUBSTITUTE(
    LEFT(
      TEXT(Lunch_End__c )
    ,2)
  ,&apos;:&apos;,&apos;&apos;)
) + if(RIGHT(Text(Lunch_End__c),2)==&apos;PM&apos; &amp;&amp; 
VALUE(
  SUBSTITUTE(
    LEFT(
      TEXT(Lunch_End__c )
    ,2)
  ,&apos;:&apos;,&apos;&apos;)
)!=12,12,0)</formula>
        <label>Lunch End Hour Int</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lunch_End_Minute_Int__c</fullName>
        <formula>VALUE(
  LEFT(
    RIGHT(
      TEXT(Lunch_End__c ), 5
    )
  ,2)
)</formula>
        <label>Lunch End Minute Int</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lunch_End__c</fullName>
        <label>Lunch End</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>7:00 AM</fullName>
                </value>
                <value>
                    <fullName>7:10 AM</fullName>
                </value>
                <value>
                    <fullName>7:20 AM</fullName>
                </value>
                <value>
                    <fullName>7:30 AM</fullName>
                </value>
                <value>
                    <fullName>7:40 AM</fullName>
                </value>
                <value>
                    <fullName>7:50 AM</fullName>
                </value>
                <value>
                    <fullName>8:00 AM</fullName>
                </value>
                <value>
                    <fullName>8:10 AM</fullName>
                </value>
                <value>
                    <fullName>8:20 AM</fullName>
                </value>
                <value>
                    <fullName>8:30 AM</fullName>
                </value>
                <value>
                    <fullName>8:40 AM</fullName>
                </value>
                <value>
                    <fullName>8:50 AM</fullName>
                </value>
                <value>
                    <fullName>9:00 AM</fullName>
                </value>
                <value>
                    <fullName>9:10 AM</fullName>
                </value>
                <value>
                    <fullName>9:20 AM</fullName>
                </value>
                <value>
                    <fullName>9:30 AM</fullName>
                </value>
                <value>
                    <fullName>9:40 AM</fullName>
                </value>
                <value>
                    <fullName>9:50 AM</fullName>
                </value>
                <value>
                    <fullName>10:00 AM</fullName>
                </value>
                <value>
                    <fullName>10:10 AM</fullName>
                </value>
                <value>
                    <fullName>10:20 AM</fullName>
                </value>
                <value>
                    <fullName>10:30 AM</fullName>
                </value>
                <value>
                    <fullName>10:40 AM</fullName>
                </value>
                <value>
                    <fullName>10:50 AM</fullName>
                </value>
                <value>
                    <fullName>11:00 AM</fullName>
                </value>
                <value>
                    <fullName>11:10 AM</fullName>
                </value>
                <value>
                    <fullName>11:20 AM</fullName>
                </value>
                <value>
                    <fullName>11:30 AM</fullName>
                </value>
                <value>
                    <fullName>11:40 AM</fullName>
                </value>
                <value>
                    <fullName>11:50 AM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lunch_Start_Hour_Int__c</fullName>
        <formula>VALUE(
  SUBSTITUTE(
    LEFT(
      TEXT(Lunch_Start__c )
    ,2)
  ,&apos;:&apos;,&apos;&apos;)
) + if(RIGHT(Text(Lunch_Start__c),2)==&apos;PM&apos; &amp;&amp;
VALUE(
  SUBSTITUTE(
    LEFT(
      TEXT(Lunch_Start__c )
    ,2)
  ,&apos;:&apos;,&apos;&apos;)
)!=12
,12,0)</formula>
        <label>Lunch Start Hour Int</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lunch_Start_Minute_Int__c</fullName>
        <formula>VALUE(
  LEFT(
    RIGHT(
      TEXT(Lunch_Start__c ), 5
    )
  ,2)
)</formula>
        <label>Lunch Start Minute Int</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lunch_Start__c</fullName>
        <label>Lunch Start</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>7:00 AM</fullName>
                </value>
                <value>
                    <fullName>7:10 AM</fullName>
                </value>
                <value>
                    <fullName>7:20 AM</fullName>
                </value>
                <value>
                    <fullName>7:30 AM</fullName>
                </value>
                <value>
                    <fullName>7:40 AM</fullName>
                </value>
                <value>
                    <fullName>7:50 AM</fullName>
                </value>
                <value>
                    <fullName>8:00 AM</fullName>
                </value>
                <value>
                    <fullName>8:10 AM</fullName>
                </value>
                <value>
                    <fullName>8:20 AM</fullName>
                </value>
                <value>
                    <fullName>8:30 AM</fullName>
                </value>
                <value>
                    <fullName>8:40 AM</fullName>
                </value>
                <value>
                    <fullName>8:50 AM</fullName>
                </value>
                <value>
                    <fullName>9:00 AM</fullName>
                </value>
                <value>
                    <fullName>9:10 AM</fullName>
                </value>
                <value>
                    <fullName>9:20 AM</fullName>
                </value>
                <value>
                    <fullName>9:30 AM</fullName>
                </value>
                <value>
                    <fullName>9:40 AM</fullName>
                </value>
                <value>
                    <fullName>9:50 AM</fullName>
                </value>
                <value>
                    <fullName>10:00 AM</fullName>
                </value>
                <value>
                    <fullName>10:10 AM</fullName>
                </value>
                <value>
                    <fullName>10:20 AM</fullName>
                </value>
                <value>
                    <fullName>10:30 AM</fullName>
                </value>
                <value>
                    <fullName>10:40 AM</fullName>
                </value>
                <value>
                    <fullName>10:50 AM</fullName>
                </value>
                <value>
                    <fullName>11:00 AM</fullName>
                </value>
                <value>
                    <fullName>11:10 AM</fullName>
                </value>
                <value>
                    <fullName>11:20 AM</fullName>
                </value>
                <value>
                    <fullName>11:30 AM</fullName>
                </value>
                <value>
                    <fullName>11:40 AM</fullName>
                </value>
                <value>
                    <fullName>11:50 AM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Hour_Int__c</fullName>
        <formula>VALUE(
  SUBSTITUTE(
    LEFT(
      TEXT(Start_Time__c )
    ,2)
  ,&apos;:&apos;,&apos;&apos;)
) + if(RIGHT(Text(Start_Time__c),2)==&apos;PM&apos; &amp;&amp; 
VALUE(
  SUBSTITUTE(
    LEFT(
      TEXT(Start_Time__c )
    ,2)
  ,&apos;:&apos;,&apos;&apos;)
)!=12
,12,0)</formula>
        <label>Start Hour Int</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Minute_Int__c</fullName>
        <formula>VALUE(
  LEFT(
    RIGHT(
      TEXT(Start_Time__c ), 5
    )
  ,2)
)</formula>
        <label>Start Minute Int</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>7:00 AM</fullName>
                </value>
                <value>
                    <fullName>7:10 AM</fullName>
                </value>
                <value>
                    <fullName>7:20 AM</fullName>
                </value>
                <value>
                    <fullName>7:30 AM</fullName>
                </value>
                <value>
                    <fullName>7:40 AM</fullName>
                </value>
                <value>
                    <fullName>7:50 AM</fullName>
                </value>
                <value>
                    <fullName>8:00 AM</fullName>
                </value>
                <value>
                    <fullName>8:10 AM</fullName>
                </value>
                <value>
                    <fullName>8:20 AM</fullName>
                </value>
                <value>
                    <fullName>8:30 AM</fullName>
                </value>
                <value>
                    <fullName>8:40 AM</fullName>
                </value>
                <value>
                    <fullName>8:50 AM</fullName>
                </value>
                <value>
                    <fullName>9:00 AM</fullName>
                </value>
                <value>
                    <fullName>9:10 AM</fullName>
                </value>
                <value>
                    <fullName>9:20 AM</fullName>
                </value>
                <value>
                    <fullName>9:30 AM</fullName>
                </value>
                <value>
                    <fullName>9:40 AM</fullName>
                </value>
                <value>
                    <fullName>9:50 AM</fullName>
                </value>
                <value>
                    <fullName>10:00 AM</fullName>
                </value>
                <value>
                    <fullName>10:10 AM</fullName>
                </value>
                <value>
                    <fullName>10:20 AM</fullName>
                </value>
                <value>
                    <fullName>10:30 AM</fullName>
                </value>
                <value>
                    <fullName>10:40 AM</fullName>
                </value>
                <value>
                    <fullName>10:50 AM</fullName>
                </value>
                <value>
                    <fullName>11:00 AM</fullName>
                </value>
                <value>
                    <fullName>11:10 AM</fullName>
                </value>
                <value>
                    <fullName>11:20 AM</fullName>
                </value>
                <value>
                    <fullName>11:30 AM</fullName>
                </value>
                <value>
                    <fullName>11:40 AM</fullName>
                </value>
                <value>
                    <fullName>11:50 AM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User Schedule</label>
    <nameField>
        <displayFormat>US-{0000}</displayFormat>
        <label>User Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>